# rust

./: .gitignore  main  main.rs  update1.txt
game1/: Cargo.toml
game1/src/: main.rs
game2/: Cargo.toml
gex/: Cargo.toml
gex/src/: datatype.rs  main.rs  ownership.rs
guessing_game/src/: main.rs
image-downloader/: Cargo.toml
new_folder/: Cargo.toml  data.txt
new_folder/src/: main.rs  trialFile1.rs
restart/src/: main  main.rs
result/src/: main.rs
web/backend/: Cargo.toml
web/frontend0/: Cargo.toml  index.html
web/frontend0/src/: main.rs
